<resources>
    <string name="app_name">NewsApp</string>
    <string name="categories_title">Choose category</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="select_country">Select country</string>
    <string name="missing_api_key">Missing NEWS_API_KEY in local.properties</string>
    <string name="fetch_failed">Failed to fetch news</string>
    <string name="favorite">Favorite</string>
    <string name="login_required_favorite">Login required to favorite articles</string>
    <string name="invalid_article_url">Article link is unavailable</string>
    <string name="no_title">Untitled article</string>
    <string name="no_headlines_for_filters">No headlines for %1$s in %2$s right now</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="forgot_your_password"><u>Forgot your password?</u></string>
    <string name="have_an_account">Have an account?</string>
    <string name="page_title">General</string>
    <string name="more">More</string>
    <string name="content_description_more">More options</string>
    <string name="content_description_favorite">Favorite list</string>
    <string name="category_general">General</string>
    <string name="category_sports">Sports</string>
    <string name="category_economy">Economy</string>
    <string name="category_entertainment">Entertainment</string>
    <string name="category_health">Health</string>
    <string name="category_technology">Technology</string>
    <string name="category_science">Science</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="send"><u>Send</u></string>
</resources>