<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="16dp"
        android:background="?attr/colorSurface"
        app:title="@string/app_name"
        app:menu="@menu/top_app_bar_home_sc"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <GridLayout
        android:id="@+id/categoriesGrid"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:padding="12dp"
        android:rowCount="4"
        android:useDefaultMargins="true"
        app:layout_constraintTop_toBottomOf="@id/topAppBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardGeneral"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_columnSpan="2"
            android:layout_margin="8dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="20dp"
            app:cardElevation="4dp">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.6"
                android:src="@drawable/bg_general"
                android:scaleType="centerCrop"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/category_general"
                android:textSize="22sp"
                android:textStyle="bold"/>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardSports"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="20dp"
            app:cardElevation="4dp">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.6"
                android:src="@drawable/bg_sports"
                android:scaleType="centerCrop"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/category_sports"
                android:textSize="22sp"
                android:textStyle="bold"/>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardEconomy"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="20dp"
            app:cardElevation="4dp">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.6"
                android:src="@drawable/bg_economy"
                android:scaleType="centerCrop"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/category_economy"
                android:textSize="22sp"
                android:textStyle="bold"/>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardEntertainment"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="20dp"
            app:cardElevation="4dp">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.6"
                android:src="@drawable/bg_entertainment"
                android:scaleType="centerCrop"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/category_entertainment"
                android:textSize="22sp"
                android:textStyle="bold"/>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardHealth"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="20dp"
            app:cardElevation="4dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.6"
                android:src="@drawable/bg_health"
                android:scaleType="centerCrop"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/category_health"
                android:textSize="22sp"
                android:textStyle="bold"/>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardTechnology"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="20dp"
            app:cardElevation="4dp">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.6"
                android:src="@drawable/bg_technology"
                android:scaleType="centerCrop"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/category_technology"
                android:textSize="22sp"
                android:textStyle="bold"/>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardScience"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="20dp"
            app:cardElevation="4dp">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.6"
                android:src="@drawable/bg_science"
                android:scaleType="centerCrop"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/category_science"
                android:textSize="22sp"
                android:textStyle="bold"/>
        </com.google.android.material.card.MaterialCardView>

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>